--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -105,6 +105,27 @@
                                                      th:errors="*{email}"></div>
                                             </div>
                                             <!--                                                address-->
+                                            <div class="row justify-content-between">
+                                                <label class="form-label">Địa chỉ nhận hàng</label>
+                                                <div class="col">
+                                                    <select class="form-select" id="city"
+                                                            aria-label=".form-select-sm" th:name="city">
+                                                        <option value="tinh" selected>Chọn tỉnh thành</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col">
+                                                    <select class="form-select" th:name="district" id="district"
+                                                            aria-label=".form-select-sm">
+                                                        <option value="quan" selected>Chọn quận huyện</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col">
+                                                    <select class="form-select" th:name="ward" id="ward"
+                                                            aria-label=".form-select-sm">
+                                                        <option value="xa" selected>Chọn phường xã</option>
+                                                    </select>
+                                                </div>
+                                            </div>
                                             <div class="mb-3">
                                                 <label class="form-label">Địa chỉ nhận hàng</label>
                                                 <input type="text" class="form-control"
