--- a/webBanTiVi/src/main/resources/templates/user/page/product/accessory.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/accessory.html
@@ -22,7 +22,7 @@
                                    placeholder="Tìm tên sản phẩm, thông số ...">
                         </div>
                         <div class="w-25">
-                            <button type="button" class="btn btn-outline-secondary" id="btn-search">Tìm</button>
+                            <button type="button" class="btn btn-outline-secondary" id="btn-reset">Đặt lại</button>
                         </div>
                     </div>
                 </div>
