--- a/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/pay.html
@@ -74,7 +74,7 @@
                                                 <div class="col">
                                                     <label class="form-label">Tên người nhận</label>
                                                     <input class="form-control" type="text" placeholder="họ và tên"
-                                                           th:value="${session.user.name}"
+                                                           th:value="${session.user.fullName}"
                                                            th:name="name">
                                                     <span id="nameloc" class="error"></span>
                                                     <div class="alert alert-warning"
