--- a/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/product/tivi.html
@@ -11,7 +11,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb breadcrumb-style1">
                 <li class="breadcrumb-item">
-                    <a href="/client">Trang chủ</a>
+                    <a href="/">Trang chủ</a>
                 </li>
                 <li class="breadcrumb-item active">Tivi</li>
             </ol>
