--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -125,7 +125,7 @@
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                     title=""
                                                                 >
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
@@ -140,7 +140,7 @@
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                     title=""
                                                                 >
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
@@ -155,7 +155,7 @@
                                                                     title=""
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                 >
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product    /anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
