--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -160,7 +160,7 @@
                                                                     class="avatar avatar-xl pull-up border-dark border"
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                     title="">
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
@@ -175,7 +175,7 @@
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                     title=""
                                                                 >
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
@@ -190,7 +190,7 @@
                                                                     title=""
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                 >
-                                                                    <img src="/image/anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
