--- a/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/profile/order.html
@@ -88,6 +88,7 @@
                                         th:data-bs-target="|#modal${bill.id}|" th:value="${bill.id}">Trả hàng
                                 </button>
                                 <a class="btn btn-outline-dark"
+                                   onclick="return confirm('Xác nhận hủy đơn hàng')"
                                    th:href="@{/order/remove/{id}(id=${bill.id})}"
                                    th:if="${bill.billStatus.code== 'WP' || bill.billStatus.code== 'PG' }"
                                 >Hủy đơn hàng
