--- a/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/search/search_order.html
@@ -52,7 +52,7 @@
                                 </button>
                                 <a class="btn btn-outline-dark"
                                    onclick="return confirm('Xác nhận hủy đơn hàng')"
-                                   th:href="@{/order/remove/{id}(id=${bill.id})}"
+                                   th:href="@{/order/remove/{id}(id=${session.bill.id})}"
                                    th:if="${session.bill.billStatus.code== 'WP' || session.bill.billStatus.code== 'PG' }"
                                 >Hủy đơn hàng
                                 </a>
@@ -155,7 +155,7 @@
                                                                     title=""
                                                                     data-bs-offset="0,4" data-bs-html="true"
                                                                 >
-                                                                    <img src="/image/product    /anhdefault.jpg"
+                                                                    <img src="/image/product/anhdefault.jpg"
                                                                          alt="Avatar"
                                                                          class="image-preview">
                                                                     <input type="file" multiple name="return-images"
