khánh sửa số lượng voucher user

--- a/webBanTiVi/src/main/resources/templates/user/page/promotion/voucherdetail.html
+++ b/webBanTiVi/src/main/resources/templates/user/page/promotion/voucherdetail.html
@@ -21,7 +21,7 @@
                 trở lên</p>
         </div>
             <div class="alert alert-danger col-6">
-                <p class="text-danger fs-xlarge fw-bold">Số lượng: chỉ [(${voucher.getQuantity()})] voucher</p>
+                <p class="text-danger fs-xlarge fw-bold">Số lượng: còn [(${soluongcon})] trong tổng số [(${voucher.getQuantity()})] voucher</p>
                 <hr>
                 <a type="button"
                    class="btn btn-outline-danger" data-bs-toggle="modal"
