update valid voucher

--- a/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
+++ b/webBanTiVi/src/main/resources/templates/admin/page/coupon/coupon.html
@@ -188,7 +188,7 @@
                                                         <label class="form-label">Mã giảm giá:</label>
                                                         <input type="text" class="form-control" th:name="code"
                                                                th:value="${coupon.code}">
-                                                        <span  class="error codeloc"></span>
+<!--                                                        <span  class="error codeloc"></span>-->
                                                     </div>
                                                     <div class="mb-3">
                                                         <label class="form-label">Giá trị:</label>
